<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".Quis.QuisActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:id="@+id/score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="296dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/quis"
            android:textSize="20sp" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tvCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_alignParentEnd="true"
            android:textSize="30sp" />

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/question_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="20sp"
            android:padding="2dp"
            android:id="@+id/question" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:background="#03A9f4"
                android:textColor="#fff"
                android:padding="8dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/choice1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:background="#03A9f4"
                android:textColor="#fff"
                android:padding="8dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/choice2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:background="#03A9f4"
                android:textColor="#fff"
                android:padding="8dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/choice3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:background="#03A9f4"
                android:textColor="#fff"
                android:padding="8dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/choice4" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>