<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/img"
            android:layout_below="@id/text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon"
            android:layout_width="match_parent"
            android:layout_height="260dp" />

        <TextView
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dynalight"
            android:text="@string/belajaryukak"
            android:textAlignment="center"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_marginBottom="0px"
            android:fontFamily="@font/nova_slim"
            android:text="@string/aplikasi_belajar_untuk_kakak_kakak"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageView
        android:layout_centerHorizontal="true"
        android:src="@drawable/eu"
        android:layout_above="@id/cr"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/cr"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/namakelompok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>