<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".HomeActivity"
    android:id="@+id/home">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/head2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="218dp">

                <ImageView
                    android:src="@drawable/a"
                    android:id="@+id/head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter" />


            </RelativeLayout>

            <View

                android:layout_below="@id/head2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#FFFFFF" />

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_alignParentBottom="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modul_pembelajaran"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:id="@+id/modul" />

                <View
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/modul"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#FFFFFF" />

            </RelativeLayout>

            <GridLayout
                android:layout_marginTop="0dp"
                android:columnCount="2"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_bindo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="60dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/indo"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/indo"
                            android:textColor="#6F6F6F"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_ppkn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="60dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/pkn"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/ppkn"
                            android:textColor="#6F6F6F"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_senibudaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="60dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/seni"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/senbud"
                            android:textColor="#6F6F6F"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_penjaskes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="60dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/penjas"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/penjaskes"
                            android:textColor="#6F6F6F"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_quis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    app:cardElevation="60dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/quis"
                            android:layout_width="80dp"
                            android:layout_height="80dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/quis"
                            android:textColor="#6F6F6F"
                            android:textSize="17sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </GridLayout>


        </LinearLayout>

    </ScrollView>
</FrameLayout>